--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.13.1",
+    "@cloudinary/url-gen": "^1.21.0",
+    "@hookform/resolvers": "^4.0.0",
     "@tailwindcss/vite": "^4.0.6",
     "lucide-react": "^0.475.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.5",
+    "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.5",
     "react-spinners": "^0.15.0",
+    "sonner": "^1.7.4",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
