--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@cloudinary/url-gen": "^1.21.0",
     "@hookform/resolvers": "^4.0.0",
     "@tailwindcss/vite": "^4.0.6",
+    "html2canvas": "^1.4.1",
     "jsbarcode": "^3.11.6",
     "lucide-react": "^0.475.0",
     "prop-types": "^15.8.1",
